# user-service

./: Cargo.toml
src/: create_table.rs  dbconnection.rs  lib.rs  main.rs
src/create_user/: create_user.rs
src/get_user/: getallusers.rs  getuser.rs
src/users/: user.rs
