[package]
name = "userservice"
version = "0.1.0"
authors = ["rsb007 <rahul.sing@knoldus.in>"]

[dependencies]
cdrs_helpers_derive = '*'
maplit = '1.0.1'
cdrs = "2.0.0-beta.3"
actix-web = "0.7"
openssl-sys = "0.9"
openssl = " 0.10.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bytes = "0.4"
futures = "0.1"
env_logger = "*"
json = "*"
actix = "0.7"
listenfd = "0.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3